--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spline+Sans+Mono:ital,wght@0,300..700;1,300..700&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 body{
-    font-family: 'Inter', sans-serif;
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'Spline Sans Mono', monospace;
     font-weight: 400;
+}
+
+.delete-cinema{
+    font-size: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+.text-themed{
+    background: -webkit-linear-gradient(215deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 1) 50%, rgba(253, 41, 32, 1) 54%, rgba(252, 176, 69, 1) 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .input-themed{
     border-color: rgb(131,58,180);
@@ -24,7 +43,7 @@ body{
     --bs-btn-disabled-color: #6c757d;
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: #6c757d;
-    --bs-gradient: linear-gradient(135deg, rgba(131,58,180,0.3) 0%, rgba(253,29,29,0.3) 50%, rgba(253,41,32,0.3) 54%, rgba(252,176,69,0.3) 100%);
+    --bs-gradient: linear-gradient(285deg, rgba(131,58,180,0.3) 0%, rgba(253,29,29,0.3) 50%, rgba(253,41,32,0.3) 54%, rgba(252,176,69,0.3) 100%);
 }
 .form-control:focus {
     color: var(--bs-body-color);
@@ -33,14 +52,15 @@ body{
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(252,176,69,0.25)
 }
-.modal-content{
-  /* border-width: 4px;
-  border-style: solid;
-  border-image: linear-gradient(); */
+/* .modal-content{
     border-width: 5px;
     border-style: solid;
     border-radius: 0px;
-    border-image: linear-gradient(135deg, rgba(131,58,180,0.3) 0%, rgba(253,29,29,0.3) 50%, rgba(253,41,32,0.3) 54%, rgba(252,176,69,0.3) 100%) 1;
+    border-image: linear-gradient(65deg, rgba(131,58,180,0.3) 0%, rgba(253,29,29,0.3) 50%, rgba(253,41,32,0.3) 54%, rgba(252,176,69,0.3) 100%) 1;
+} */
+
+.modal-content .btn-themed{
+    background: linear-gradient(195deg, rgba(131, 58, 180, 1) 0%, rgba(253, 29, 29, 0.3) 50%, rgba(253, 41, 32, 1) 54%, rgba(252, 176, 69, 1) 100%);
 }
 
 .cinemas-list{
